--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ footer-links:
 disqus: mattferderer
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: 
+google_analytics: UA-7360525-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
@@ -72,4 +72,3 @@ exclude:
     - Gemfile.lock
     - LICENSE
     - README.md
-    - bower_components
