--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Matt Ferderer
 description: Web Developer - Tinkering, Developing & Engineering One Bit at a Time
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: http://www.gravatar.com/avatar/55a4a4ae73044020eccad911b18a1c36.png
+avatar: https://s.gravatar.com/avatar/55a4a4ae73044020eccad911b18a1c36?s=80
 
 #
 # Flags below are optional
